# CefBridge

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEV_INFO.md  MSG_DESIGN.md
src/: CefBridge.cpp  CefBridge.h  main.cc
src/cef_bridge/: cef_bridge.cc  cef_bridge.h  cef_bridge_win.cc  cef_bridge_win.h
src/cef_client/: CMakeLists.txt  cefclient_win.cc
src/cef_client/browser/: binding_test.cc  binding_test.h  browser_window.cc  browser_window.h  browser_window_osr_win.cc  browser_window_osr_win.h  browser_window_std_win.cc  browser_window_std_win.h  bytes_write_handler.cc  client_app_browser.cc  client_app_browser.h  client_app_delegates_browser.cc  client_browser.cc  client_handler.cc  client_handler.h  client_handler_osr.cc  client_handler_osr.h  client_handler_std.cc  client_handler_std.h  dialog_test.cc  dialog_test.h  extension_util.cc  file_util.cc  geometry_util.cc  image_cache.cc  main_context.cc  main_context.h  main_context_impl.cc  main_context_impl.h  main_context_impl_win.cc  main_message_loop_external_pump.h  main_message_loop_external_pump_win.cc  main_message_loop_multithreaded_win.h  media_router_test.cc  media_router_test.h  osr_accessibility_helper.cc  osr_accessibility_node.cc  osr_accessibility_node_win.cc  osr_d3d11_win.cc  osr_dragdrop_win.cc  (+51 more)
src/cef_client/common/: binary_value_utils.cc  client_app.cc  client_app_delegates_common.cc  client_switches.cc  scheme_test_common.cc  string_util.cc
src/cef_client/renderer/: client_app_delegates_renderer.cc  client_app_renderer.cc  client_app_renderer.h  client_renderer.cc  ipc_performance_test.cc  ipc_performance_test.h  performance_test.cc  performance_test.h  performance_test_tests.cc
src/cef_client/resources/win/: cefclient.rc
src/cef_launcher/: launcher.cc  launcher.h  launcher_win.cc  launcher_win.h
src/cefclient/: CMakeLists.txt
src/cefclient/resources/win/: cefclient.rc
src/shared_memory/: shm_manager.cc  shm_manager.h  shm_obj.cc  shm_obj.h  shm_obj_win.cc  shm_obj_win.h
src/test_reader/: reader.cc  renderer.cc  renderer.h
